fix: style conflict in dark mode
fix #21

--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,7 @@ body {
   background-color: var(--tg-panel-background) !important;
 }
 
-:root {
+body {
   --tg-panel-background: rgb(255, 255, 255);
   --tg-chatbox-background: rgb(245 245 245);
 }
@@ -560,7 +560,7 @@ div[message-actions] {
 
 /* ===== Dark mode ===== */
 html[theme=dark] {
-  :root {
+  body {
     --tg-panel-background: rgb(34, 34, 34);
     --tg-border-color: rgb(68, 68, 68);
     --tg-chatbox-background: rgb(47 47 47);
